feat: Add header and home components with routing
- Implemented routing for the home component.
- Created a header component with navigation links.
- Added a badge component for social links.
- Updated global types for third-party libraries.
- Enhanced the main HTML structure with a gradient background.
- Integrated Tailwind CSS and Preline for styling.

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
             ],
             "styles": [
               "src/styles.css"
+            ],
+            "scripts": [
+              "node_modules/preline/dist/index.js"
             ]
           },
           "configurations": {
@@ -88,5 +91,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
